Project Monierave {
  database_type: 'PostgreSQL'
  Note: 'Database schema for the Monierave API'
}

Enum Currency {
  USD
  EUR
}

Table users as U {
  username varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [not null]
  password_changed_at timestamptz [not null, default: `TIMESTAMPTZ '0001-01-01 00:00:00Z'`]
  created_at timestamptz [not null, default: `now()`]
  email_verified_at timestamptz
  email_deliverability_status varchar [not null, default: 'unknown']
  email_deliverability_updated_at timestamptz
  email_bounced_at timestamptz
  account_status varchar [not null, default: 'active', note: 'Pending accounts may only manage email verification; active accounts may use financial features; disabled registrations exceeded the verification window.']
  registration_expires_at timestamptz [note: 'Unverified registrations remain recoverable for seven days. Verification tokens expire independently after 24 hours.']

  indexes {
    `lower(email)` [unique, name: 'users_email_lower_idx']
  }

  checks {
    `char_length(username) BETWEEN 3 AND 32`
    `char_length(btrim(full_name)) BETWEEN 1 AND 100`
    `char_length(email) BETWEEN 3 AND 254`
    `email_deliverability_status IN ('unknown', 'pending', 'deliverable', 'undeliverable')`
    `account_status IN ('pending', 'active', 'disabled')`
  }

  Note: 'Application users and their email verification lifecycle.'
}

Table accounts as A {
  id bigserial [pk]
  public_id uuid [not null, unique, default: `gen_random_uuid()`, note: 'Stable, non-sequential account identifier exposed through public APIs.']
  account_number varchar(10) [not null, unique, note: 'Customer-facing routing identifier. It is not an authentication secret.']
  owner varchar [not null, ref: > U.username]
  balance bigint [not null, default: 0, note: 'Current posted balance derived from posted ledger activity. Holds and card authorizations are not modeled.']
  currency varchar [not null]
  status varchar [not null, default: 'active', note: 'Frozen accounts may receive funds but cannot send; closed accounts cannot transact.']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  closed_at timestamptz

  indexes {
    owner [name: 'accounts_owner_idx']
    (owner, currency) [unique, name: 'accounts_owner_currency_key']
    (owner, status, created_at, id) [name: 'accounts_owner_status_idx']
  }

  checks {
    `account_number ~ '^[0-9]{10}$'`
    `balance >= 0`
    `status IN ('active', 'frozen', 'closed')`
    `(status = 'closed' AND closed_at IS NOT NULL AND balance = 0) OR (status <> 'closed' AND closed_at IS NULL)`
  }
}

Table ledger_accounts as LA {
  id bigserial [pk]
  public_id uuid [not null, unique, default: `gen_random_uuid()`]
  customer_account_id bigint [unique, ref: - A.id]
  code varchar [unique]
  kind varchar [not null]
  currency varchar [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (kind, currency, id) [name: 'ledger_accounts_kind_currency_idx']
  }

  checks {
    `kind IN ('customer', 'settlement')`
    `(kind = 'customer' AND customer_account_id IS NOT NULL AND code IS NULL) OR (kind = 'settlement' AND customer_account_id IS NULL AND code IS NOT NULL)`
  }

  Note: 'Customer and system accounts used by the double-entry ledger.'
}

Table banking_transactions as BT {
  id uuid [pk, default: `gen_random_uuid()`]
  reference varchar [not null, unique]
  transaction_type varchar [not null]
  status varchar [not null, default: 'pending']
  currency varchar [not null]
  amount bigint [not null]
  narration varchar [not null, default: '']
  initiated_by varchar [not null]
  reversal_of uuid [unique, ref: - BT.id]
  created_at timestamptz [not null, default: `now()`]
  posted_at timestamptz
  failed_at timestamptz
  reversed_at timestamptz

  indexes {
    (created_at, id) [name: 'banking_transactions_created_at_idx']
    (transaction_type, status, created_at) [name: 'banking_transactions_type_status_idx']
  }

  checks {
    `transaction_type IN ('deposit', 'withdrawal', 'internal_transfer', 'reversal')`
    `status IN ('pending', 'posted', 'failed', 'reversed')`
    `amount > 0`
    `(transaction_type = 'reversal' AND reversal_of IS NOT NULL AND reversal_of <> id) OR (transaction_type <> 'reversal' AND reversal_of IS NULL)`
    `(status = 'pending' AND posted_at IS NULL AND failed_at IS NULL AND reversed_at IS NULL) OR (status = 'posted' AND posted_at IS NOT NULL AND failed_at IS NULL AND reversed_at IS NULL) OR (status = 'failed' AND posted_at IS NULL AND failed_at IS NOT NULL AND reversed_at IS NULL) OR (status = 'reversed' AND posted_at IS NOT NULL AND failed_at IS NULL AND reversed_at IS NOT NULL)`
  }

  Note: 'Business-level financial events whose details are immutable after creation.'
}

Table ledger_postings {
  id bigserial [pk]
  transaction_id uuid [not null, ref: > BT.id]
  ledger_account_id bigint [not null, ref: > LA.id]
  amount bigint [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (transaction_id, ledger_account_id) [unique, name: 'ledger_postings_transaction_account_key']
    (ledger_account_id, created_at, id) [name: 'ledger_postings_account_created_idx']
    (ledger_account_id, transaction_id) [name: 'ledger_postings_account_transaction_idx']
  }

  checks {
    `amount <> 0`
  }

  Note: 'Append-only signed movements. Every posted transaction must sum to zero.'
}

Table idempotency_keys as IK {
  id bigserial [pk]
  username varchar [not null, ref: > U.username]
  operation varchar [not null]
  idempotency_key varchar [not null]
  request_hash bytea [not null, note: 'SHA-256 hash of the normalized request payload.']
  transaction_id uuid [ref: > BT.id]
  response_status smallint
  result_snapshot jsonb [note: 'Original committed domain result returned for identical retries.']
  created_at timestamptz [not null, default: `now()`]
  expires_at timestamptz [not null, default: `now() + interval '24 hours'`]

  indexes {
    (username, operation, idempotency_key) [unique, name: 'idempotency_keys_owner_operation_key']
    expires_at [name: 'idempotency_keys_expires_at_idx']
  }

  checks {
    `operation IN ('internal_transfer')`
    `length(idempotency_key) BETWEEN 1 AND 128`
    `octet_length(request_hash) = 32`
    `(transaction_id IS NULL AND response_status IS NULL AND result_snapshot IS NULL) OR (transaction_id IS NOT NULL AND response_status IS NOT NULL AND result_snapshot IS NOT NULL)`
    `expires_at > created_at`
  }

  Note: 'Short-lived deduplication records for safely retrying money-moving requests.'
}

Table beneficiaries as B {
  id uuid [pk, default: `gen_random_uuid()`]
  owner varchar [not null, ref: > U.username]
  destination_account_id bigint [not null, ref: > A.id]
  nickname varchar [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (owner, destination_account_id) [unique, name: 'beneficiaries_owner_destination_key']
    (owner, created_at, id) [name: 'beneficiaries_owner_created_idx']
  }

  checks {
    `length(nickname) BETWEEN 1 AND 50 AND nickname = btrim(nickname)`
  }

  Note: 'User-owned saved transfer destinations. Account bigint IDs remain internal.'
}

Table sessions {
  id uuid [pk]
  username varchar [not null, ref: > U.username]
  refresh_token_hash bytea [not null, note: 'SHA-256 hash of the current refresh token; raw refresh tokens are never persisted.']
  refresh_token_id uuid [not null]
  device_token_hash bytea [not null, note: 'SHA-256 hash of the browser-bound device secret; raw device secrets are never persisted.']
  user_agent varchar [not null]
  client_ip varchar [not null]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
  last_refreshed_at timestamptz
  revoked_at timestamptz [note: 'Non-null means every access and refresh token bound to this session is revoked.']
  revoked_reason varchar

  indexes {
    username [name: 'sessions_username_idx']
    refresh_token_hash [unique, name: 'sessions_refresh_token_hash_idx']
    device_token_hash [unique, name: 'sessions_device_token_hash_idx']
    username [unique, name: 'sessions_one_active_per_user_idx', note: 'Partial index where revoked_at IS NULL.']
  }
}

Table email_jobs {
  id uuid [pk]
  parent_job_id uuid [ref: > email_jobs.id]
  job_type varchar [not null]
  username varchar [not null, ref: > U.username]
  recipient varchar [not null]
  payload jsonb [not null, default: `'{}'::jsonb`]
  status varchar [not null, default: 'pending', note: 'Worker execution state. Sent means the email provider accepted the API request.']
  attempt_count integer [not null, default: 0]
  max_attempts integer [not null, default: 10]
  provider_message_id varchar
  last_error text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  queued_at timestamptz
  processing_at timestamptz
  last_attempt_at timestamptz
  sent_at timestamptz
  dead_lettered_at timestamptz
  delivery_status varchar [not null, default: 'pending', note: 'Recipient delivery state reported asynchronously by the email provider.']
  delivery_event_at timestamptz
  accepted_at timestamptz
  delivered_at timestamptz
  bounced_at timestamptz
  bounce_type varchar
  bounce_subtype varchar
  bounce_message text
  verification_token_hash bytea [note: 'SHA-256 hash of the opaque verification token. The raw token is never stored.']
  verification_token_expires_at timestamptz

  indexes {
    (status, created_at) [name: 'email_jobs_status_created_at_idx']
    username [name: 'email_jobs_username_idx']
    parent_job_id [name: 'email_jobs_parent_job_id_idx', note: 'Partial index where parent_job_id IS NOT NULL.']
    provider_message_id [unique, name: 'email_jobs_provider_message_id_idx', note: 'Partial unique index where provider_message_id IS NOT NULL.']
    verification_token_hash [unique, name: 'email_jobs_verification_token_hash_idx', note: 'Partial unique index where verification_token_hash IS NOT NULL.']
  }

  checks {
    `status IN ('pending', 'queued', 'processing', 'retrying', 'sent', 'dead_letter')`
    `attempt_count >= 0`
    `max_attempts > 0`
    `delivery_status IN ('pending', 'accepted', 'delivered', 'delayed', 'bounced', 'failed', 'suppressed', 'complained')`
    `(verification_token_hash IS NULL) = (verification_token_expires_at IS NULL)`
    `verification_token_hash IS NULL OR octet_length(verification_token_hash) = 32`
  }

  Note: 'Durable email work items. Dead-letter jobs remain here with status dead_letter and may be replayed using parent_job_id.'
}

Table outbox_events {
  id uuid [pk]
  email_job_id uuid [not null, unique, ref: > email_jobs.id]
  event_type varchar [not null]
  payload jsonb [not null]
  correlation_id uuid [not null]
  entity_type varchar [not null]
  entity_id uuid [not null]
  status varchar [not null, default: 'pending']
  publish_attempts integer [not null, default: 0]
  available_at timestamptz [not null, default: `now()`]
  claimed_by varchar
  claimed_until timestamptz
  last_error text
  created_at timestamptz [not null, default: `now()`]
  published_at timestamptz

  indexes {
    (available_at, created_at) [name: 'outbox_events_claimable_idx', note: 'Partial index where status is pending or publishing.']
    (correlation_id, created_at, id) [name: 'outbox_events_correlation_idx']
    (entity_type, entity_id, created_at, id) [name: 'outbox_events_entity_idx']
    (event_type, created_at, id) [name: 'outbox_events_type_created_idx']
  }

  checks {
    `status IN ('pending', 'publishing', 'published')`
    `publish_attempts >= 0`
  }

  Note: 'Transactional outbox records committed in the same database transaction as application state.'
}

Table audit_logs {
  id bigserial [pk]
  entity_type varchar [not null]
  entity_id uuid [not null]
  correlation_id uuid [not null]
  event_type varchar [not null]
  actor varchar [not null]
  from_state varchar
  to_state varchar
  message text
  metadata jsonb [not null, default: `'{}'::jsonb`]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (entity_type, entity_id, created_at, id) [name: 'audit_logs_entity_idx']
    (correlation_id, created_at, id) [name: 'audit_logs_correlation_idx']
    (created_at, id) [name: 'audit_logs_created_at_idx', note: 'Both columns are indexed in descending order.']
  }

  Note: 'Append-only audit history. Intentionally has no foreign keys so records survive entity retention cleanup. Database triggers reject updates, deletes, and truncation.'
}

Table email_delivery_events {
  webhook_id varchar [pk]
  email_job_id uuid
  provider_message_id varchar [not null]
  event_type varchar [not null]
  occurred_at timestamptz [not null]
  received_at timestamptz [not null, default: `now()`]
  payload jsonb [not null]

  indexes {
    (email_job_id, occurred_at) [name: 'email_delivery_events_job_idx', note: 'occurred_at is indexed in descending order.']
    (provider_message_id, occurred_at) [name: 'email_delivery_events_provider_message_idx', note: 'occurred_at is indexed in descending order.']
  }

  Note: 'Immutable verified provider events. email_job_id intentionally has no foreign key so retained history survives email-job cleanup with its original UUID.'
}
